[package]
name = "ditto-operator"
version = "0.4.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "EPL-2.0"

[dependencies]

k8s-openapi = { version = "0.13", default-features = false }
kube = { version = "0.66", features = ["derive", "runtime", "client"] }
operator-framework = { version = "0.6", features = ["v1_20", "schemas"] }

tokio = { version = "1", features = ["full"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
schemars = "0.8"

anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
futures = "0.3"
snafu = "0.6"
percent-encoding = "2"
log = "0.4"
env_logger = "0.7"
rand = "0.7"
sha1 = "0.6"
indexmap = "1"

[patch.crates-io]
#k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi.git#b8046d9a" }
#kube = { git = "https://github.com/clux/kube-rs", branch="master" }
#kube-derive = { git = "https://github.com/clux/kube-rs", branch="master" }
#operator-framework = { path = "../operator-framework" }
operator-framework = { git = "https://github.com/ctron/operator-framework", rev = "d586267ca51a38c32c5ca90cabf2b5807fa2003e" }
#kube = { git = "https://github.com/ctron/kube-rs", rev = "59f175adc61575b83c01fc8809ea70cb7c172ebb" }

